Fixed freelancer display
Cards don't get squished anymore when searching

--- a/Fisconnect/src/containers/Freelancers.css
+++ b/Fisconnect/src/containers/Freelancers.css
@@ -12,7 +12,7 @@
 .freelancer_card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     max-width: 300px;
-    margin: 20px;
+    margin: 25px 5px;
     text-align: center;
     padding: 10px;
     width: 100%;
@@ -69,4 +69,3 @@
 .footer {
   padding: 20px;
 }
-
