--- a/Fisconnect/src/containers/Home.css
+++ b/Fisconnect/src/containers/Home.css
@@ -84,3 +84,7 @@
     /* Blue from Wix site background-color: #093F7C; */
     background-color: #28527a;
   }
+
+  .yellow-background {
+    background-color: #f4d160; 
+  }
